--- a/webapp/rust/static/register.html
+++ b/webapp/rust/static/register.html
@@ -1,16 +1,16 @@
 {{#*inline "content"}}
 <div class="header">
-  <h1>ログイン</h1>
+  <h1>ユーザー登録</h1>
 </div>
 
 {{#if flash}}
 <div id="notice-message" class="alert alert-danger">
   {{flash}}
 </div>
-{{/if}}
+{{end}}
 
 <div class="submit">
-  <form method="post" action="/login">
+  <form method="post" action="/register">
     <div class="form-account-name">
       <span>アカウント名</span>
       <input type="text" name="account_name">
@@ -23,10 +23,6 @@
       <input type="submit" name="submit" value="submit">
     </div>
   </form>
-</div>
-
-<div class="isu-register">
-  <a href="/register">ユーザー登録</a>
 </div>
 {{/inline}}
 {{> (lookup this "parent")}}
