features: get get_register

--- a/webapp/rust/static/layout.html
+++ b/webapp/rust/static/layout.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    {{> login}}
+    {{> content}}
   </div>
   <script src="/js/timeago.min.js"></script>
   <script src="/js/main.js"></script>
