--- a/webapp/rust/static/index.html
+++ b/webapp/rust/static/index.html
@@ -8,7 +8,7 @@
       <textarea name="body"></textarea>
     </div>
     <div class="form-submit">
-      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+      <input type="hidden" name="csrf_token" value="{{csrf_token}}">
       <input type="submit" name="submit" value="submit">
     </div>
     {{#if flash}}
