--- a/webapp/rust/static/posts.html
+++ b/webapp/rust/static/posts.html
@@ -1,5 +1,8 @@
+{{#*inline "posts_html"}}
 <div class="isu-posts">
-  {{#each post}}
+  {{#each posts}}
   {{> post_html}}
   {{/each}}
 </div>
+{{/inline}}
+{{> (lookup this "posts_parent")}}
