fix: 表示ユーザがログインユーザとして表示される不具合を修正

--- a/webapp/rust/static/layout.html
+++ b/webapp/rust/static/layout.html
@@ -14,11 +14,11 @@
         <h1><a href="/">Iscogram</a></h1>
       </div>
       <div class="isu-header-menu">
-        {{#if (eq user.id 0)}}
+        {{#if (eq me.id 0)}}
         <div><a href="/login">ログイン</a></div>
         {{else}}
-        <div><a href="/{{account_name}}"><span class="isu-account-name">{{user.account_name}}</span>さん</a></div>
-        {{#if (eq user.authority 1)}}
+        <div><a href="/{{account_name}}"><span class="isu-account-name">{{me.account_name}}</span>さん</a></div>
+        {{#if (eq me.authority 1)}}
         <div><a href="/admin/banned">管理者用ページ</a></div>
         {{/if}}
         <div><a href="/logout">ログアウト</a></div>
